test/libsolidity/syntaxTests/parsing/payable_accessor.sol
contract test {
	uint payable x;
}
// ----
// ParserError: (22-29): State mutability can only be specified for address types.
